--- a/backend-django/requirements.txt
+++ b/backend-django/requirements.txt
@@ -1,9 +1,17 @@
 annotated-types==0.7.0
 asgiref==3.8.1
+cffi==1.17.1
+contextlib2==21.6.0
+cryptography==43.0.1
 Django==5.1.1
 django-ninja==1.3.0
+django-ninja-extra==0.21.4
+django-ninja-jwt==5.3.3
+injector==0.22.0
+pycparser==2.22
 pydantic==2.9.0
 pydantic_core==2.23.2
+PyJWT==2.9.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.1
